# MatrixLabWork2

Labwork2/: CMakeLists.txt  Console.cpp  Console.h  Data.cpp  Data.h  DataRecipient.cpp  DataRecipient.h  Line.cpp  Line.h  Manager.cpp  Manager.h  Randomizer.cpp  Randomizer.h  Symbol.cpp  Symbol.h  Validation.cpp  Validation.h  main.cpp
